--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.7.0",
+    "prop-types": "^15.6.0",
     "re-base": "^3.2.0",
     "react": "^16.1.1",
     "react-addons-css-transition-group": "^15.6.2",
